feat: auth complete
